Switched to Java 8 and made compatibility with Spring Boot 2.7 Adjusted to framework changes Polished code